src/main/java/com/example/vodionlinemoviewebsite/error/EmailNotExisted.java
package com.example.vodionlinemoviewebsite.error;

import jakarta.validation.Constraint;
import jakarta.validation.Payload;

import java.lang.annotation.*;

@Target({ElementType.FIELD})
@Retention(RetentionPolicy.RUNTIME)
@Documented
@Constraint(validatedBy = NotExistedValidator.class)
public @interface EmailNotExisted {

    //error messages
    public String message() default "Email not already! Please again login.";

    //represents group of constraints
    public Class<?>[] groups() default {};
    //represents additional information about annotation
    public Class<? extends Payload>[] payload() default {};
}
